# gh-inbox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  build.rs  package-lock.json  package.json  prek.toml
docs/specs/: 2026-03-16-pr-detail-redesign.md  architecture.md  m12-github-notification-sync-plan.md  m12-github-notification-sync.md  product.md  roadmap.md  theming.md
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  App.test.ts  app.css  main.ts  test-setup.ts
migrations/: 001_create_notifications.sql  002_create_pull_requests.sql  003_create_comments.sql  004_create_last_fetched_at.sql  005_extend_pull_requests.sql  006_extend_comments.sql  007_create_commits.sql  008_create_check_runs.sql  009_extend_pull_requests_status.sql  010_create_user_teams.sql  011_add_etag_to_last_fetched_at.sql  012_add_html_url_to_comments.sql  013_add_diff_hunk_to_comments.sql  014_add_labels_to_pull_requests.sql  015_create_reviews.sql  016_add_resolved_to_comments.sql  017_create_user_preferences.sql  018_add_avatar_url.sql  019_add_synced_at_to_notifications.sql
src/: lib.rs  main.rs  markdown.rs  server.rs
src/api/: error.rs  events.rs  inbox.rs  mod.rs  preferences.rs  pull_requests.rs  sync.rs
src/db/: mod.rs  queries.rs
src/github/: check_runs.rs  commits.rs  fetch_pr_graphql.rs  mod.rs  notifications.rs  pull_requests.rs  review_threads.rs  reviews.rs  sync.rs  teams.rs
src/models/: mod.rs  notification.rs  pull_request.rs  (+1 more)
tests/: release_embed.sh  routes.rs
(+66 files in other folders)
