[package]
name = "gh-inbox"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dirs = "6"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
