[package]
name = "gh-inbox"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
include_dir = "0.7"
futures = "0.3"
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
comrak = "0.51.0"
ammonia = "4.1.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
